# bsky-graph

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  release.yaml
notebook/: Test Follows.ipynb
src/: atproto_client.rs  follower.rs  follows.rs  follows_writer.rs  get_follower.rs  get_follows.rs  lib.rs  main.rs  parquet_writer.rs  read_did.rs  utils.rs
test/: did.txt
