[package]
name = "bsky-graph"
version = "0.1.6"
edition = "2024"
authors = ["Vincent Gauthier <vincent.gauthier@telecom-sudparis.eu>"]

[dependencies]
anyhow = "1.0.102"
arrow = "59.0.0"
atrium-api = "0.25.8"
atrium-xrpc-client = "0.5.15"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
governor = "0.10.4"
indicatif = "0.18.4"
log = "0.4.32"
log4rs = "1.4.0"
parquet = "59.0.0"
serde = "1.0.228"
serde_arrow = { version = "0.14.2", features = ["arrow-59"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
